lpweb: Real data in actor summary

--- a/provider/lpweb/web/index.gohtml
+++ b/provider/lpweb/web/index.gohtml
@@ -142,65 +142,7 @@
             </tr>
             </thead>
             <tbody>
-            <tr>
-                <td>f01234</td>
-                <td>mig0</td>
-                <td>23TiB</td>
-                <td>
-                    <div class="deadline-box">
-                        <div class="deadline-entry deadline-proven"></div>
-                        <div class="deadline-entry deadline-partially-faulty"></div>
-                        <div class="deadline-entry deadline-faulty"></div>
-                        <div class="deadline-entry deadline-proven"></div>
-                        <div class="deadline-entry deadline-proven"></div>
-                        <div class="deadline-entry deadline-entry-cur"></div>
-                        <div class="deadline-entry"></div>
-                        <div class="deadline-entry"></div>
-                        <div class="deadline-entry"></div>
-                        <div class="deadline-entry"></div>
-                        <div class="deadline-entry"></div>
-                        <div class="deadline-entry"></div>
-                        <div class="deadline-entry"></div>
-                        <div class="deadline-entry"></div>
-                        <div class="deadline-entry"></div>
-                        <div class="deadline-entry"></div>
-
-                        <div class="deadline-entry"></div>
-                        <div class="deadline-entry"></div>
-                        <div class="deadline-entry"></div>
-                        <div class="deadline-entry"></div>
-                        <div class="deadline-entry"></div>
-                        <div class="deadline-entry"></div>
-                        <div class="deadline-entry"></div>
-                        <div class="deadline-entry"></div>
-                        <div class="deadline-entry"></div>
-                        <div class="deadline-entry"></div>
-                        <div class="deadline-entry"></div>
-                        <div class="deadline-entry"></div>
-                        <div class="deadline-entry"></div>
-                        <div class="deadline-entry"></div>
-                        <div class="deadline-entry"></div>
-                        <div class="deadline-entry"></div>
-
-                        <div class="deadline-entry"></div>
-                        <div class="deadline-entry"></div>
-                        <div class="deadline-entry"></div>
-                        <div class="deadline-entry"></div>
-                        <div class="deadline-entry"></div>
-                        <div class="deadline-entry"></div>
-                        <div class="deadline-entry"></div>
-                        <div class="deadline-entry"></div>
-                        <div class="deadline-entry"></div>
-                        <div class="deadline-entry"></div>
-                        <div class="deadline-entry"></div>
-                        <div class="deadline-entry"></div>
-                        <div class="deadline-entry"></div>
-                        <div class="deadline-entry"></div>
-                        <div class="deadline-entry"></div>
-                        <div class="deadline-entry"></div>
-                    </div>
-                </td>
-            </tr>
+            {{template "actor_summary" .ActorInfos}}
             </tbody>
         </table>
     </div>
