--- a/curiosrc/web/hapi/web/cluster_machines.gohtml
+++ b/curiosrc/web/hapi/web/cluster_machines.gohtml
@@ -3,8 +3,10 @@
     <tr>
         <td>{{.Address}}</td>
         <td>{{.ID}}</td>
-        <td>todo</td>
         <td>{{.SinceContact}}</td>
+        {{range .RecentTasks}}
+            <td>{{.TaskName}}:{{.Success}}{{if ne 0 .Fail}}(<i class="{{if eq 0 .Success}}error{{else}}warning{{end}}">{{.Fail}}</i>){{end}}</td>
+        {{end}}
     </tr>
 {{end}}
 {{end}}
