curio web: Show basic balances in Actor Summary

--- a/curiosrc/web/hapi/web/actor_summary.gohtml
+++ b/curiosrc/web/hapi/web/actor_summary.gohtml
@@ -15,6 +15,9 @@
             {{end}}
         </div>
     </td>
+    <td>{{.ActorBalance}}</td>
+    <td>{{.ActorAvailable}}</td>
+    <td>{{.WorkerBalance}}</td>
 </tr>
 {{end}}
 {{end}}
