curio web: Show SP wins in actor summary

--- a/curiosrc/web/hapi/web/actor_summary.gohtml
+++ b/curiosrc/web/hapi/web/actor_summary.gohtml
@@ -18,6 +18,13 @@
     <td>{{.ActorBalance}}</td>
     <td>{{.ActorAvailable}}</td>
     <td>{{.WorkerBalance}}</td>
+    <td>
+        <table>
+            <tr><td>1day:&nbsp; {{.Win1}}</td></tr>
+            <tr><td>7day:&nbsp; {{.Win7}}</td></tr>
+            <tr><td>30day: {{.Win30}}</td></tr>
+        </table>
+    </td>
 </tr>
 {{end}}
 {{end}}
