curio web: node info page

--- a/curiosrc/web/hapi/web/cluster_machines.gohtml
+++ b/curiosrc/web/hapi/web/cluster_machines.gohtml
@@ -1,7 +1,7 @@
 {{define "cluster_machines"}}
 {{range .}}
     <tr>
-        <td>{{.Address}}</td>
+        <td><a href="/hapi/node/{{.ID}}">{{.Address}}</a></td>
         <td>{{.ID}}</td>
         <td>{{.SinceContact}}</td>
         {{range .RecentTasks}}
