feat: curioweb: add favicon

--- a/curiosrc/web/hapi/web/root.gohtml
+++ b/curiosrc/web/hapi/web/root.gohtml
@@ -6,6 +6,7 @@
     <script type="module" src="chain-connectivity.js"></script>
     <link rel="stylesheet" href="/main.css">
     <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/hack-font@3.3.0/build/web/hack-subset.css'>
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
 </head>
 <body>
 <div class="app-head">
