--- a/curiosrc/web/hapi/web/node_info.gohtml
+++ b/curiosrc/web/hapi/web/node_info.gohtml
@@ -1,6 +1,6 @@
 {{define "node_info"}}
 <h2>Info</h2>
-<table>
+<table class="table table-dark">
     <tr>
         <td>Host</td>
         <td>ID</td>
@@ -22,7 +22,7 @@
 </table>
 <hr>
 <h2>Storage</h2>
-<table>
+<table class="table table-dark">
     <tr>
         <td>ID</td>
         <td>Type</td>
@@ -56,7 +56,7 @@
 <hr>
 <h2>Tasks</h2>
 <h3>Running</h3>
-<table>
+<table class="table table-dark">
     <tr>
         <td>ID</td>
         <td>Task</td>
@@ -73,7 +73,7 @@
     {{end}}
 </table>
 <h3>Recently Finished</h3>
-<table>
+<table class="table table-dark">
     <tr>
         <td>ID</td>
         <td>Task</td>
