--- a/curiosrc/web/hapi/web/root.gohtml
+++ b/curiosrc/web/hapi/web/root.gohtml
@@ -1,10 +1,11 @@
 {{define "root"}}
+<!DOCTYPE html>
 <html>
 <head>
     <title>{{.PageTitle}}</title>
     <script src="https://unpkg.com/htmx.org@1.9.5" integrity="sha384-xcuj3WpfgjlKF+FXhSQFQ0ZNr39ln+hwjN3npfM9VBnUskLolQAcN80McRIVOPuO" crossorigin="anonymous"></script>
-    <script type="module" src="chain-connectivity.mjs"></script>
-    <link rel="stylesheet" href="/main.css">
+    <script type="module" src="/chain-connectivity.mjs"></script>
+    <link rel="stylesheet" href="/ux/main.css">
     <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/hack-font@3.3.0/build/web/hack-subset.css'>
     <link rel="icon" type="image/svg+xml" href="/favicon.svg">
     <script type="module" src="/ux/curio-ux.mjs"></script>
