--- a/curiosrc/web/hapi/web/sector_info.gohtml
+++ b/curiosrc/web/hapi/web/sector_info.gohtml
@@ -5,6 +5,54 @@
         {{template "sector_porep_state" .PipelinePoRep}}
     </div>
     <div>
+        <h3>Pieces</h3>
+        <table class="porep-state">
+            <tr>
+                <th>Piece Index</th>
+                <th>Piece CID</th>
+                <th>Piece Size</th>
+                <th>Data URL</th>
+                <th>Data Raw Size</th>
+                <th>Delete On Finalize</th>
+                <th>F05 Publish CID</th>
+                <th>F05 Deal ID</th>
+                <th>Direct Piece Activation Manifest</th>
+
+                <th>PiecePark ID</th>
+                <th>PP URL</th>
+                <th>PP Created At</th>
+                <th>PP Complete</th>
+                <th>PP Cleanup Task</th>
+            </tr>
+            {{range .Pieces}}
+                <tr>
+                    <td>{{.PieceIndex}}</td>
+                    <td>{{.PieceCid}}</td>
+                    <td>{{.PieceSize}}</td>
+                    <td>{{.DataUrl}}</td>
+                    <td>{{.DataRawSize}}</td>
+                    <td>{{.DeleteOnFinalize}}</td>
+                    <td>{{.F05PublishCid}}</td>
+                    <td>{{.F05DealID}}</td>
+                    <td>{{.DDOPam}}</td>
+                    {{if .IsParkedPiece}}
+                    <td>{{.PieceParkID}}</td>
+                    <td>{{.PieceParkDataUrl}}</td>
+                    <td>{{.PieceParkCreatedAt}}</td>
+                    <td>{{.PieceParkComplete}}</td>
+                    <td>{{.PieceParkCleanupTaskID}}</td>
+                    {{else}}
+                    <td>{{if not .IsParkedPieceFound}}ERR:RefNotFound{{end}}</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    {{end}}
+                </tr>
+            {{end}}
+        </table>
+    </div>
+    <div>
         <h3>Storage</h3>
         <table class="porep-state">
             <tr>
