fix UI, improve init, compose

--- a/curiosrc/web/static/ux/main.css
+++ b/curiosrc/web/static/ux/main.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.cdnfonts.com/css/metropolis-2');
+/*@import url('https://fonts.cdnfonts.com/css/metropolis-2');*/
 
 html {
     min-height: 100vh;
